# srhtfullstack

./: Makefile  README.md  compose.yaml
builds.sr.ht/: .gitignore  Makefile  builds.sr.ht-shell  config.example.ini  go.mod  go.sum  pyproject.toml  schema.sql
builds.sr.ht/.builds/: alpine.yml
builds.sr.ht/api/: manifest.go  manifest_test.go  task.go
builds.sr.ht/api/errors/: errors.go
builds.sr.ht/api/graph/: celery.go  resolver.go  schema.graphqls  schema.resolvers.go
builds.sr.ht/api/loaders/: middleware.go
builds.sr.ht/ariadne/: meta.toml.in
builds.sr.ht/buildsrht/: app.py  decorators.py  default_query.graphql  manifest.py
builds.sr.ht/buildsrht/blueprints/: jobs.py  secrets.py  settings.py
builds.sr.ht/buildsrht/graphql/: builds.graphql  secrets.graphql
builds.sr.ht/buildsrht/meta/: payment.graphql
builds.sr.ht/buildsrht/templates/: index-logged-out.html  job-details.html  job.html  secret_share.html  sidebar.html  submit.html
builds.sr.ht/buildsrht/types/: __init__.py  job.py
builds.sr.ht/cmd/api/: main.go
builds.sr.ht/cmd/worker/: main.go
builds.sr.ht/contrib/: crontab
builds.sr.ht/images/alpine/: build.yml  functions  genimg
builds.sr.ht/images/archlinux/: build.yml  functions  genimg  pacman.conf  pacstrap.conf
builds.sr.ht/images/debian/: build.yml  functions  genimg  qemu-debootstrap
builds.sr.ht/images/fedora/: build.yml  functions  genimg
builds.sr.ht/images/freebsd/: build.yml  genimg  genpkgimg
builds.sr.ht/images/guix/: build.yml  functions  genimg  system.scm
builds.sr.ht/images/netbsd/: build.yml  functions  genimg
builds.sr.ht/images/nixos/: base-system-configuration.nix  build.yml  functions  qemu-system-configuration.nix
builds.sr.ht/images/openbsd/: build.yml  functions  genimg
builds.sr.ht/images/qemu/: Dockerfile
builds.sr.ht/images/rockylinux/: build.yml  functions  genimg
builds.sr.ht/images/ubuntu/: 25.04  25.10  26.04  build.yml  functions  genimg  oldlts
builds.sr.ht/migrations/: 0002_drop_legacy_tables.sql
builds.sr.ht/worker/: context.go  database.go  http.go  image_config.go  jobs.go  tasks.go  triggers.go
core.sr.ht/: .gitignore  Makefile  README.md  pyproject.toml  sourcehut-builddate  sourcehut-buildver  sr.ht-keygen  sr.ht-update-profiles
core.sr.ht/.builds/: alpine.yml
core.sr.ht/contrib/: gunicorn.conf.py
core.sr.ht/scss/: base.scss  dark.scss  font-awesome.min.css
core.sr.ht/srht/: api.py  assets.py  cache.py  config.py  crypto.py  database.py  debug.py  email.py  flagtype.py  gql_lexer.py  markdown.py  metrics.py  redis.py  rid.py  search.py  validation.py
core.sr.ht/srht/app/: __init__.py  cors.py  csrf.py  datetime.py  flask.py  icons.py  pagination.py  profile.py  session.py
core.sr.ht/srht/ariadne/: __init__.py
core.sr.ht/srht/graphql/: __init__.py  auth.py  blueprint.py  client.py  error.py  time.py
core.sr.ht/srht/icons/: README
core.sr.ht/srht/oauth/: __init__.py  client.py  decorator.py  interface.py  scope.py  token.py  user.py
core.sr.ht/srht/templates/: graphql.html  internal_error.html  layout-full.html  layout.html  nav.html  oauth-error.html  pagination.html  profile.html  read_only.html  suspended.html  unauthorized.html
core.sr.ht/srht/webhook/: __init__.py  celery.py  magic.py  (+1 more)
core.sr.ht/static/: codemirror.js  simple.js
lists.sr.ht/: .gitignore  Makefile  README.md  config.example.ini  go.mod  go.sum  pyproject.toml  schema.sql
lists.sr.ht/.builds/: alpine.yml
lists.sr.ht/api/: gqlgen.yml  server.go
lists.sr.ht/contrib/: backfill-patchsets  maildir-to-mbox  mbox-split  pile-o-emails-to-mbox  reclassify-patches
lists.sr.ht/ingress/: api.go  backend.go  config.go  errors.go  main.go  metrics.go  post.go  smtp.go  subscribe.go  types.go  unsubscribe.go
lists.sr.ht/listssrht/: app.py  default_query.graphql  filters.py  process.py
lists.sr.ht/migrations/: 0002_webhook_indices.sql  0003_drop_legacy_tables.sql  0004_add_receive-own.sql  0005_fix_patchset_cascade.sql  0006_store_mail_as_bytes.sql  0007_rename_envelope_column.sql  0008_add_git_trailers.sql  0009_add_resource_ids.sql  0010_add_supersedes_id.sql
lists.sr.ht/scss/: main.scss
meta.sr.ht/: .gitignore  Makefile  README.md  config.example.ini  go.mod  go.sum  meta.sr.ht-daily  meta.sr.ht-manageuser  pyproject.toml  run.py  schema.sql
meta.sr.ht/.builds/: alpine.yml
meta.sr.ht/api/: gqlgen.yml
meta.sr.ht/contrib/: default-products.sql  email-everyone  revalidate-intent
meta.sr.ht/js/: billing-setup.js  payment-intent.js  setup-intent.js
meta.sr.ht/metasrht/: app.py  audit.py  auth_validation.py  blacklist.py  countries.py  decorators.py  default_query.graphql  email.py  qrcode.py  queries.graphql  totp.py  webhooks.py
meta.sr.ht/migrations/: 0002_sshkey_fingerprint_index.sql  0003_add_subsidized_price.sql  0004_add_user_avatars.sql  0005_add_reverse_vat_to_invoice.sql  0006_clean_up_sshkeys_table.sql  0007_introduce_rids.sql  0008_add_pronouns.sql  0009_rename_sshkey_key.sql  0010_refactor_ssh_key.sql  0011_finish_sshkey_backfill.sql  0012_make_fingerprint_nullable.sql
meta.sr.ht/scripts/: revoke-expired-tokens
meta.sr.ht/scss/: main.scss
paste.sr.ht/: .gitignore  Makefile  README.md  config.example.ini  go.mod  go.sum  pyproject.toml  run.py  schema.sql
paste.sr.ht/.builds/: alpine.yml
paste.sr.ht/api/: gqlgen.yml
paste.sr.ht/migrations/: 0002_add_visibility_enum.sql  0003_drop_legacy_tables.sql
paste.sr.ht/pastesrht/: access.py  app.py  default_query.graphql  filters.py  search.py
paste.sr.ht/scss/: main.scss
scm.sr.ht/: pyproject.toml
scm.sr.ht/.builds/: alpine.yml
scm.sr.ht/scmsrht/: formatting.py  submit.py
todo.sr.ht/: .gitignore  Makefile  config.example.ini  go.mod  go.sum  pyproject.toml  schema.sql  todo.sr.ht-lmtp
todo.sr.ht/.builds/: alpine.yml
todo.sr.ht/api/: gqlgen.yml
todo.sr.ht/migrations/: 0002_ticket_state_enums.sql  0003_webhook_indices.sql  0004_remove_legacy_tables.sql  0005_add_resource_ids.sql
todo.sr.ht/todosrht/: access.py  app.py  default_query.graphql  export.py  filters.py  search.py  tickets.py  urls.py
(+289 files in other folders)
