[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "buildsrht"
dynamic = ["version"]
description = "builds.sr.ht website"
readme = "README.md"
authors = [{name = "Drew DeVault", email = "sir@cmpwn.com"}]
dependencies = [
      "srht",
      "redis",
      "pyyaml",
      "markdown",
      "bleach",
]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]

[project.urls]
repository = "https://git.sr.ht/~sircmpwn/builds.sr.ht"

[tool.setuptools]
# This defaults to true, but we explicitly specify what we want included in the
# package via packages and tool.setuptools.package-data below.
include-package-data = false
packages = [
    "buildsrht",
    "buildsrht.blueprints",
    "buildsrht.graphql",
    "buildsrht.meta",
    "buildsrht.templates",
    "buildsrht.types",
]
script-files = [
    "builds.sr.ht-shell",
]
[tool.setuptools.package-data]
"buildsrht" = ['default_query.graphql', 'schema.graphqls']
"buildsrht.templates" = ['*.html']

[tool.setuptools_scm]

# Note: buildsrht/graphql/meta/ is generated via ariadne-meta.toml
[tool.ariadne-codegen]
async_client = false
schema_path = "api/graph/schema.graphqls"
queries_path = "buildsrht/graphql/"
target_package_path = "buildsrht"
target_package_name = "graphql"
plugins = ["srht.ariadne.AriadnePlugin"]

[tool.ariadne-codegen.sourcehut]
service_name = "builds.sr.ht"

[tool.ariadne-codegen.scalars.Time]
type = "datetime.datetime"
parse = "srht.graphql.gql_time"
