[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pastesrht"
dynamic = ["version"]
description = "paste.sr.ht website"
readme = "README.md"
authors = [{name = "Drew DeVault", email = "sir@cmpwn.com"}]
dependencies = [
      "srht",
      "pyyaml",
]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]

[project.urls]
repository = "https://git.sr.ht/~sircmpwn/paste.sr.ht"

[tool.setuptools]
# This defaults to true, but we explicitly specify what we want included in the
# package via packages and tool.setuptools.package-data below.
include-package-data = false
packages = [
    "pastesrht",
    "pastesrht.blueprints",
    "pastesrht.graphql",
    "pastesrht.templates",
    "pastesrht.types",
]
[tool.setuptools.package-data]
"pastesrht" = ['default_query.graphql', 'schema.graphqls']
"pastesrht.templates" = ['*.html']

[tool.setuptools_scm]

[tool.ariadne-codegen]
async_client = false
schema_path = "api/graph/schema.graphqls"
queries_path = "pastesrht/graphql/"
target_package_path = "pastesrht"
target_package_name = "graphql"
plugins = ["srht.ariadne.AriadnePlugin"]

[tool.ariadne-codegen.sourcehut]
service_name = "paste.sr.ht"

[tool.ariadne-codegen.scalars.Time]
type = "datetime.datetime"
parse = "srht.graphql.gql_time"
